Fix countdown on mobile

--- a/css/jquery.countdown.css
+++ b/css/jquery.countdown.css
@@ -1,7 +1,6 @@
 .countdownHolder{
-	width:450px;
 	margin:0 auto;
-	font-size: 40px;
+	font-size: 39px;
 	text-align:center;
 	letter-spacing:-3px;
 }
